Animacion al pulsar un dispositivo de la lsita Documentacion de todo el avance hasta el momento Descubri como poner que soy autor de un commit sin poner mi nombre aqui mismo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="simple_dialog_cancel">Nope</string>
 
     <string name="iv_desc_bt_icon">Indicates if the device is connected or not</string>
+
+    <string name="toast_searching_devices">Looking for Morvi…</string>
 </resources>
